# certradar-cli

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: homebrew.yml  release.yml
contrib/emacs/: certradar.el
src/: main.rs
src/commands/: dns.rs  headers.rs  health.rs  mod.rs  rdap.rs  report.rs  search.rs  ssl.rs
src/models/: types.rs
src/output/: colors.rs  mod.rs  promo.rs  table.rs
src/services/: crtsh.rs  dns.rs  headers.rs  mod.rs  rdap.rs  ssl_analyzer.rs
