[package]
name = "certradar-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Certificate transparency and SSL/TLS security analysis CLI tool"
license = "MIT"
repository = "https://github.com/FlerAlex/certradar-cli"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# TLS/SSL analysis
native-tls = "0.2"
tokio-native-tls = "0.3"
openssl = "0.10"

# DNS resolution
trust-dns-resolver = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Output formatting
comfy-table = "7"
colored = "2"
indicatif = "0.17"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
urlencoding = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
